# esp-jumpstart

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES.md  LICENSE.txt  README.md  README_cn.md  error.html  humans.txt  index.html  qrcode.html
1_hello_world/: CMakeLists.txt  Makefile
1_hello_world/main/: CMakeLists.txt  app_main.c
1hello_world/: CMakeLists.txt  Makefile
2_drivers/: CMakeLists.txt  Makefile
2_drivers/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.c  app_priv.h
2outlet/: Makefile
2outlet/main/: app_driver.c  app_main.c  app_priv.h
2wifi_connection/: Makefile
2wifi_connection/main/: app_main.c
3_wifi_connection/: CMakeLists.txt  Makefile  sdkconfig.defaults
3_wifi_connection/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.c  app_main.c  board_esp8266_devkitc.h  idf_component.yml
3network_config/: Makefile
3network_config/main/: app_main.c
3wifi_connection/: CMakeLists.txt  Makefile
3wifi_connection/main/: app_main.c
4_network_config/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
4_network_config/main/: CMakeLists.txt  app_driver.c  app_main.c  app_priv.h
4network_config/: CMakeLists.txt  Makefile  sdkconfig.defaults
4network_config/main/: CMakeLists.txt  app_driver.c
5_cloud/: CMakeLists.txt  Makefile  sdkconfig.defaults
5_cloud/main/: CMakeLists.txt  app_cloud.c  app_driver.c  app_main.c  app_priv.h  aws_custom_utils.c  aws_custom_utils.h  board_devkits.h  cloud.c  cloud_aws.c  component.mk
5cloud/: CMakeLists.txt  Makefile
5cloud/main/: app_main.c  cloud.c  component.mk
6_ota/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
6_ota/main/: CMakeLists.txt  app_cloud.c  app_driver.c  app_main.c  app_priv.h  app_wifi.c  aws_custom_utils.c  aws_custom_utils.h  cloud.c  cloud_aws.c  component.mk  idf_component.yml  ota.c
6ota/: CMakeLists.txt  Makefile
6ota/main/: CMakeLists.txt  app_driver.c  cloud.c  component.mk
7_mfg/: CMakeLists.txt  Makefile  mfg_config.csv  partitions.csv  sdkconfig.defaults
7_mfg/main/: CMakeLists.txt  Kconfig.projbuild  app_cloud.c  app_driver.c  app_main.c  app_ota.c  app_priv.h  aws_custom_utils.c  board_esp32_devkitc.h  cloud.c  cloud_aws.c  component.mk  ota.c
7_mfg/main/cloud_cfg/: README.md  github_server.cert
7mfg/: CMakeLists.txt  Makefile  mfg_config.csv  partitions.csv
css/: main.css  skeleton.css
docs/: README.md  conf_common.py  convert_to_rst.sh  requirements.txt
privacy-policy/: index.html
(+119 files in other folders)
